updated RFS first half

--- a/rfs.html
+++ b/rfs.html
@@ -65,6 +65,12 @@
                             a successful stint on Etsy, he wanted to make it official with his own site.
                       <p>With our foundation as an Etsy site, design-wise, we were starting from scratch.
                             Below, I outline how we went from this Etsy site to what we have now.</p>
+                      <h2>project goal</h2>
+                      <ul class="goal">
+                          <li><p>e-Commerce website</p></li>
+                          <li><p>Brand identity</p></li>
+                          <li><p>Business cards</p></li>
+                      </ul>
                   </div>
                   <ul class="one-third">
                         <li><img src="images/etsy.png"></li>
@@ -84,7 +90,9 @@
           </section>-->
           <section class="competition">
               <div id="container">
-                  <h2>Who's Out There?</h2>
+                  <h2>who's out there?</h2>
+                  <p>
+                  <h3>competitive analysis</h3>
                   <p>Darcy named a few companies with a similar concept. So, we looked them over
                   to see if we could idenfity any aesthetic similarities and key differences. We
                   found that the companies that were just starting out use stone/slate textures and colors,
@@ -101,13 +109,18 @@
           </section>
           <section class="user-research">
               <div id="container">
-                  <h3>But first, what do the people want?</h3>
+                  <h2>what do the people want?</h2>
                   <p>Considering the distinct nature of this business - painting second-hand,
                     vintage, or out-of-season shoes - we conducted surveys to see what
                     people thought of the concept and who our ideal user would be.
-                    The first survey, with 33 respondents, reconfirmed what we knew:</p>
-                    <div class="survey-results">
-                        <!--<ul class="survey">
+                  <h3 id="spacing-fix">Survey 1: User & Market Survey, 33 respondents</h3>
+                  <div class="one-third">
+                  <p>The first survey helped us define our target customer: out of the 87.5% of respondents
+                    who would pay between $100-$300 for a pair of shoes AND would purchase
+                    shoes online, 50% of them would consider buying refurbished shoes.
+                  </div>
+                    <!--<div class="survey-results">
+                        <ul class="survey">
                             <li><span>87.9%</span> mostly consider quality & style to purchase shoes</li>
                             <li><span>75.8%</span> would purchase shoes online</li>
                             <li><span>48%</span> would buy or consider buying refurbished shoes</li>
@@ -135,28 +148,35 @@
                         <p>I conducted another survey to test whether it was the term “refurbished” or the concept
                           behind RF that turned customers away. The word refurbished had to change, so we decided
                           on hand-painted. This term tested well during the website prototype.</p>
-                    </div>-->
                     </div>
+                  </div>-->
+                  <div class="two-thirds">
                       <div class="survey">
                           <div class="third">
                               <h2>87.9%</h2>
-                              <p>mostly consider quality & style to purchase shoes</p>
+                              <p>buys shoes based on quality & style</p>
                           </div>
                           <div class="third">
                               <h2>75.8%</h2>
-                              <p>would or currently purchases shoes online</p>
+                              <p>would or is purchasing shoes online</p>
                           </div>
                           <div class="third">
                               <h2>48%</h2>
-                              <p>would buy or consider buying refurbished shoes</p>
+                              <p>would consider buying refurbished shoes</p>
                           </div>
                           <div class="clearfix"></div>
                       </div>
-                      <p>And gave us our target customer: out of the 87.5% of respondents
-                        who would pay between $100-$300 for a pair of shoes AND would purchase
-                        shoes online, 50% of them would consider buying refurbished shoes.</p>
-                      <p>The second survey, with <span>133 respondents</span>, and third survey gave
-                          insight into word choice: </p>
+                  </div>
+                  <div class="clearfix"></div>
+                  <p>
+                  <h3>Survey 2: 133 respondents and Survey 3</h3>
+                  <div class="one-third">
+                      <p>The second survey tested whether it was the term “refurbished” or the concept
+                            behind RFS that turned customers away. It was the word. The third survey
+                            and preference tests examined different word usage. The final term we chose
+                            was hand-painted. </p>
+                  </div>
+                  <div class="two-thirds">
                       <div class="survey">
                             <div class="third">
                               <h2>54.3%</h2>
@@ -172,10 +192,8 @@
                             </div>
                             <div class="clearfix"></div>
                         </div>
-                        <div class="clearfix"></div>
-                        <p>I conducted another survey to test whether it was the term “refurbished” or the concept
-                          behind RF that turned customers away. The word refurbished had to change, so we decided
-                          on hand-painted. This term tested well during the website prototype.</p>
+                  </div>
+                  <div class="clearfix"></div>
               </div>
           </section>
           <section class="environment">
@@ -205,10 +223,29 @@
           </section>
           <section class="users">
               <div id="container">
-                  <h3>Who Are They?</h3>
+                  <h2>who are they?</h2>
+                  <p>
+                  <h3>target customers</h3>
+                  <p>We had an idea of who the RFS target market is, but were able
+                    to better define them through our surveys.</p>
                   <div class="user-boxes">
-                      <img src="images/vincent.png" class="first">
-                      <img src="images/jean.png" class="second">
+                      <div class="first">
+                          <img src="images/vincent.png">
+                          <h4>who's vincent?</h4>
+                          <p>Vincent is a 23-36 year-old banker/consultant or entrepreneur.
+                            His goal is to find a unique & luxury shoe that will stand out.</p>
+                          <h4>ideal day?</h4>
+                          <p>"video games during the day, fancy food, then a night
+                            out getting smashed with friends."</p>
+                      </div>
+                      <div class="second">
+                          <img src="images/jean.png">
+                          <h4>who's jean?</h4>
+                          <p>Jean is a 50-75 years-old.
+                            His goal is to reflect his flamboyant personality onto his clothes.</p>
+                          <h4>ideal day?</h4>
+                          <p>"Going for a short trip somewhere, some walking,
+                            taking photographs, and finishing with a nice dinner & wine in a familiar restaurant."
                   </div>
                   <div class="clearfix"></div>
               </div>
@@ -219,72 +256,107 @@
                       <h2>information architecture</h2>
                       <p></p>
                       <h3>Mapping</h3>
-                      <p>We conducted a card sort to help organize the website and discover
+                      <p class="one-third">We conducted a card sort to help organize the website and discover
                         whether additional pages were needed. We learned that the potential
                         customer wanted to learn more about the product, with multiple survey
                         respondents suggesting a section devoted to hand-painting techniques.</p>
-                      <img src="images/rfs-site-map.png" class="full">
+                      <div class="two-thirds"><img src="images/rfs-site-map.png" class="full"></div>
                       <div class="clearfix"></div>
                   </div>
                   <div class="mapping">
                   <h3>Flows</h3>
-                  <p>Based on our user personas, we decided to target the Vincent’s and
+                  <div class="one-third">
+                      <p>Based on our user personas, we decided to target the Vincent’s and
                     Marcus' through Instagram and Facebook, while the Jean's would learn
                     through word-of-mouth. Accordingly, I designed the below user flow to
                     reflect the journey the shopper will take once they click on that link.</p>
-                  <img src="images/rfs-user-flows.png" class="full">
-                  <button>view more flows</button>
+                      <button>view more flows</button>
+                  </div>
+                  <div class="two-thirds"><img src="images/rfs-user-flows.png" class="full"></div>
               </div>
+              <div class="clearfix"></div>
             </div>
           </section>
           <section class="sketch">
               <div id="container">
-                  <h2>translating to web</h2>
+                  <h2>sketching</h2>
                   <p>
-                  <h3>Sketching to Lo-Fi</h3>
+                    <!--<div class="user-test">
+                            <div class="clearfix"></div>
+                            <h3>user testing: lo-fi prototype</h3>
+                            <div class="first">
+                                <h4>Positives</h4>
+                                <ul class="survey">
+                                    <li><p>Seemed easy to click through. One person had trouble viewing her cart after she added an item.</p></li>
+                                    <li><p>Clean setup</p></li>
+                                </ul>
+                            </div>
+                            <div class="second">
+                                <h4>Suggestions</h4>
+                                    <ul class="survey">
+                                        <li><p>Include questions in the FAQ rather than just answers</p></li>
+                                        <li><p>Add the shoe size to product detail</p></li>
+                                        <li><p>Add more to the about section</p></li>
+                                        <li><p>Consider a before/after photo of shoes</p></li>
+                                    </ul>
+                            </div>
+                            <div class="clearfix"></div>
+                    </div>-->
+                  <h3>iterations</h3>
+                  <p>I conducted multiple rounds of testing, remote and over Skype. Below, are
+                    some comments and iterations. Other notable mentions include being asked to
+                    include questions in the FAQ page rather than just the answers.</p>
+                  <a href="https://bloc.mybalsamiq.com/projects/gulbaharokuyan/prototype/refated-HPv2?key=3a5a2fd80b3260daa462236f6967b65d4db73d88"><button>lo-fi prototype</button></a>
                   <div class="sketch-img">
-                      <img src="images/rfs-home-sketch.png" class="more-full">
-                      <img src="images/rfs-shop-browse.png" class="more-full">
-                      <img src="images/rfs-shoe-detail.png" class="more-full">
+                      <div class="shoe-iteration">
+                          <div class="one-third">
+                                <h4>good stuff</h4>
+                                <p>clean setup</p>
+                                <p>easy to click through</p>
+                          </div>
+                          <div class="two-thirds"><img src="images/rfs-home-sketch.png" class="full"></div>
+                          <div class="clearfix"></div>
+                      </div>
+                    <!--  <div class="shoe-iteration">
+                          <div class="one-third">
+                                <h4>no comment</h4>
+                          </div>
+                          <div class="two-thirds"><img src="images/rfs-shop-browse.png" class="full"></div>
+                          <div class="clearfix"></div>
+                      </div> -->
+                      <div class="shoe-iteration">
+                            <div class="one-third">
+                                <h4>the details?</h4>
+                                <p class="bubble">"Could you add the shoe size to the description?"</p>
+                                <p class="bubble">"What about including a before picture?"</p>
+                            </div>
+                            <div class="two-thirds"><img src="images/rfs-shoe-detail.png" class="full"></div>
+                      </div>
                       <div class="clearfix"></div>
                   </div>
-                  <div class="user-test">
-                          <div class="clearfix"></div>
-                          <h3>user testing: lo-fi prototype</h3>
-                          <div class="first">
-                              <h4>Positives</h4>
-                              <ul class="survey">
-                                  <li><p>Seemed easy to click through. One person had trouble viewing her cart after she added an item.</p></li>
-                                  <li><p>Clean setup</p></li>
-                              </ul>
-                          </div>
-                          <div class="second">
-                              <h4>Suggestions</h4>
-                                  <ul class="survey">
-                                      <li><p>Include questions in the FAQ rather than just answers</p></li>
-                                      <li><p>Add the shoe size to product detail</p></li>
-                                      <li><p>Add more to the about section</p></li>
-                                      <li><p>Consider a before/after photo of shoes</p></li>
-                                  </ul>
-                          </div>
-                          <div class="clearfix"></div>
-                  </div>
+
               </div>
           </section>
           <section class="branding">
               <div id="container">
                   <div class="branding-section">
                       <h2>branding</h2>
-                      <h3>Logo Formation</h3>
-                      <img src="images/logo-formation.png" class="more-full">
-                  </div>
-                  <div class="branding-section">
-                      <h3>Logo Details</h3>
-                      <div class="final-logos">
-                          <img src="images/logo-styles.png" class="first">
-                          <img src="images/logo-details.png" class="second">
+                      <p>
+                      <div class="two-thirds">
+                          <h3>Logo Formation</h3>
+                          <img src="images/logo-formation.png" class="more-full">
                           <div class="clearfix"></div>
                       </div>
+                      <div class="one-third">
+                          <h3>Logo Details</h3>
+                          <div class="final-logos">
+                              <img src="images/logo-styles.png" style="width:  80%; padding-bottom: 1rem;">
+                              <img src="images/logo-details.png" style="padding: 1rem; width: 70%;">
+                              <div class="clearfix"></div>
+                          </div>
+                      </div>
+                      <div class="clearfix"></div>
+
                   </div>
                   <div class="branding-section">
                       <h3>Colors</h3>
@@ -299,14 +371,15 @@
                       </div>
                   </div>
                   <div class="branding-section">
-                      <div class="type">
+                      <div class="two-thirds">
                           <h3>Typography</h3>
-                          <img src="images/fonts.png">
+                          <img src="images/fonts.png" class="type">
                       </div>
-                      <div class="button">
+                      <div class="one-third">
                           <h3>Buttons</h3>
-                          <img src="images/buttons.png">
+                          <img src="images/buttons.png" class="button">
                       </div>
+                      <p>
                       <div class="mock">
                           <h3>Mockup</h3>
                           <img src="images/mockup.png">
