--- a/images.html
+++ b/images.html
@@ -17,6 +17,8 @@
           <section class="rfs">
             <img src="images/rfs-shoe-bg.png">
             <img src="images/rfs-laptop.png">
+            <img src="images/rfs-green-mezlan.png">
+
 
           </section>
       </main>
