--- a/rfs.html
+++ b/rfs.html
@@ -42,19 +42,17 @@
           </nav>
           <section class="hero">
               <div class="case-hero">
-                  <div class="first">
-                      <h1>refated shoes</h1>
-                      <p>Branding   |   Strategy   |   UX & UI</p>
-                      <a href="https://projects.invisionapp.com/share/E5E270F8X#/screens"><button class="case-study-button">view prototype</button></a>
-                  </div>
-                  <img src="images/rfs-laptop.png" class="second">
-                  <div class="clearfix"></div>
               </div>
           </section>
       </header>
       <main>
           <section class="introduction">
               <div id="container">
+                  <div class="intro">
+                      <h1>refated shoes</h1>
+                      <p>Branding   |   Strategy   |   UX & UI</p>
+                      <a href="https://projects.invisionapp.com/share/E5E270F8X#/screens"><button class="case-study-button">view prototype</button></a>
+                  </div>
                   <div class="two-thirds">
                       <h2>the story</h2>
                       <p>The entrepreneur (Darcy) behind ReFated Shoes, or RFS, is an artist with
@@ -73,9 +71,9 @@
                       </ul>
                   </div>
                   <ul class="one-third">
-                        <li><img src="images/etsy.png"></li>
+                        <li><img src="images/etsy.png" id="shadow"></li>
                         <li><img src="images/arrow-black.png" id="rotate"></li>
-                        <li><img src="images/rfs-etsy.png"></li>
+                        <li><img src="images/rfs-etsy.png" id="shadow"></li>
                   </ul>
                   <div class="clearfix"></div>
               </div>
