updated landing and about pages, changed h1 font and size, changed container width to 95%

--- a/about.html
+++ b/about.html
@@ -39,25 +39,57 @@
           </nav>
       </header>
       <main>
+          <section class="intro">
+                  <h1>/gyl.bɑ.hɑɾ/</h1>
+                  <h1>or you can call me G for short; Rose for translation</h1>
+                  <p>
+                  <div class="buttons">
+                        <a href="#"><button>download resume</button></a>
+                        <a href="mailto:gokuyan@gmail.com"><button>email me</button></a>
+                  </div>
+          </section>
           <section class="about">
                 <div id="container">
+                    <h2>“Just because something works doesn’t mean it can’t be improved.”</h2>
                     <div class="about-text">
-                        <h2>“Just because something works doesn’t mean it can’t be improved.”</h2>
-                        <div class="text">
-                            <p>I am a freelance UX designer with 8 years’ experience in strategy and project development.
-                            <p>My specialty is in identifying the big picture and working downwards.
-                              I thrive in team environments, working with diverse people in a community
-                              to address and overcome boundaries.
-                            <p>It’s the potential of design and its ability to make things practical,
-                               usable, and beautiful that drives me.
-                            <p>I enjoy traveling and meeting people. Most recently, I was in
-                              rural Philippines interviewing women entrepreneurs to better
-                              understand how financial technology could impact their day-to-day.</p>
-                        </div>
-                        <div class="buttons">
-                              <a href="#"><button>download resume</button></a>
-                              <a href="mailto:gokuyan@gmail.com"><button>email me</button></a>
-                        </div>
+                        <p>
+                        <h4>why design?</h4>
+                        <p>After, probably, the 5th time in a week my husband
+                          exclaimed in pain after stubbing his toe into our IKEA wall
+                           unit, I could no longer blame clumsiness. I had originally
+                           designed our living room with only myself in mind. But as
+                           I mentally recorded his <span>pain</span> points, I found a
+                           better way to reorganize the space. So, I cleared a path that
+                           allowed him to walk through comfortably and free of stubbed toes.
+                        <p>I loved the feeling of finding a free solution to this challenge.
+                          I especially enjoyed how it included working with him to get there.
+                          Further, I loved how it included a creative element of aesthetic design.
+                        <p>Design allows you to create holistic systems, processes, or even
+                          apartment layouts that make sense, and yet, are also pretty.
+                          This is something I wanted to do.
+                        <h4>what's your experience?</h4>
+                        <p>I have more than 8 years' experience designing development programs that
+                          take place in resource-poor environments, mainly in developing countries.
+                          <p>My expertise is in interviewing people, identifying partnerships, and
+                          creating strategies. I have worked in agriculture, entrepreneurship and
+                          business development, trade, ICT, fintech, and development finance. Most
+                          recently, through interviews with large software companies, credit unions,
+                          and women microentrepreneurs, I helped design a program that combines a regional-wide
+                          digital payments platform with a microfinance and women's business
+                          development initiative in the Philippines. Fingers-crossed it works!
+                          <p>I've always been intrigued by human behavior and learning new cultures.
+                            Which is probably why my undergrad is in international economics.
+                        <h4>full circle</h4>
+                        <p>Although designing programs is exciting, I wanted to design products or larger systems,
+                          like websites, company structures, internal processes, and marketing/communications strategies.
+                          I like figuring out how things and people work together, then working with the group
+                          to test and find solutions or improvements.
+                        <h4>now let's go way back</h4>
+                        <p>I was born in Brooklyn then moved to NJ at a young age. I have a younger
+                          brother - who is a <a href="www.cokuyan.com">computer engineer (he's a back-end whiz)</a>.
+                          We grew up with 19 of our 23 first cousins - the rest were in Turkey. So, I'm used
+                          to hectic environments. I speak English, Turkish, and used to speak Spanish. My
+                          Italian is still new, but I am being tutored by a neighbor.
                     </div>
                     <div class="clearfix"></div>
                 </div>
@@ -67,18 +99,25 @@
                   <div class="caps">
                   <div class="clearfix"> </div>
                   <div class="first">
-                      <h3>Skills</h3>
+                      <h4>Skills</h4>
                       <p>UX design, UI design, branding & identity, information architecture,
                         wireframing, user research/testing, marketing & communications, strategy,
                         business development</p>
                   </div>
                   <div class="second">
-                      <h3>Software</h3>
+                      <h4>Software</h4>
                       <p>Sketch, Adobe CC (Illustrator, Photoshop, InDesign), Keynote, Microsoft
                         Office Suite (Word, Excel, PowerPoint, Publisher), InVision, Balsamiq, Figma</p>
                   </div>
                   <div class="clearfix"> </div>
               </div>
+              </div>
+          </section>
+          <section class="about">
+              <div id="container">
+                  <h4>what else?</h4>
+                  <p>If you'd like to talk about my work, background, Jane Austen, Anne Rice,
+                    or design, contact me via the links below.</p>
               </div>
           </section>
     <!--
