updated about section story, photos, and layout

--- a/about.html
+++ b/about.html
@@ -41,55 +41,93 @@
       <main>
           <section class="intro">
                   <h1>/gyl.bɑ.hɑɾ/</h1>
+                  <p>
                   <h1>or you can call me G for short; Rose for translation</h1>
                   <p>
-                  <div class="buttons">
-                        <a href="#"><button>download resume</button></a>
-                        <a href="mailto:gokuyan@gmail.com"><button>email me</button></a>
-                  </div>
+
           </section>
           <section class="about">
                 <div id="container">
-                    <h2>“Just because something works doesn’t mean it can’t be improved.”</h2>
-                    <div class="about-text">
-                        <p>
-                        <h4>why design?</h4>
-                        <p>After, probably, the 5th time in a week my husband
-                          exclaimed in pain after stubbing his toe into our IKEA wall
-                           unit, I could no longer blame clumsiness. I had originally
-                           designed our living room with only myself in mind. But as
-                           I mentally recorded his <span>pain</span> points, I found a
-                           better way to reorganize the space. So, I cleared a path that
-                           allowed him to walk through comfortably and free of stubbed toes.
-                        <p>I loved the feeling of finding a free solution to this challenge.
-                          I especially enjoyed how it included working with him to get there.
-                          Further, I loved how it included a creative element of aesthetic design.
-                        <p>Design allows you to create holistic systems, processes, or even
-                          apartment layouts that make sense, and yet, are also pretty.
-                          This is something I wanted to do.
-                        <h4>what's your experience?</h4>
-                        <p>I have more than 8 years' experience designing development programs that
-                          take place in resource-poor environments, mainly in developing countries.
-                          <p>My expertise is in interviewing people, identifying partnerships, and
-                          creating strategies. I have worked in agriculture, entrepreneurship and
-                          business development, trade, ICT, fintech, and development finance. Most
-                          recently, through interviews with large software companies, credit unions,
-                          and women microentrepreneurs, I helped design a program that combines a regional-wide
-                          digital payments platform with a microfinance and women's business
-                          development initiative in the Philippines. Fingers-crossed it works!
-                          <p>I've always been intrigued by human behavior and learning new cultures.
-                            Which is probably why my undergrad is in international economics.
-                        <h4>full circle</h4>
-                        <p>Although designing programs is exciting, I wanted to design products or larger systems,
-                          like websites, company structures, internal processes, and marketing/communications strategies.
-                          I like figuring out how things and people work together, then working with the group
-                          to test and find solutions or improvements.
-                        <h4>now let's go way back</h4>
-                        <p>I was born in Brooklyn then moved to NJ at a young age. I have a younger
-                          brother - who is a <a href="www.cokuyan.com">computer engineer (he's a back-end whiz)</a>.
-                          We grew up with 19 of our 23 first cousins - the rest were in Turkey. So, I'm used
-                          to hectic environments. I speak English, Turkish, and used to speak Spanish. My
-                          Italian is still new, but I am being tutored by a neighbor.
+                    <div class="one-third" id="images">
+                        <img src="images/me.png" class="first">
+                        <img src="images/belle.png" class="second">
+                        <img src="images/babies.png" class="first">
+                        <img src="images/mommy.png" class="second">
+                        <img src="images/zebras.png" class="first">
+                        <img src="images/keynote.png" class="second">
+                        <img src="images/groupphoto.png" class="first">
+                        <img src="images/kosovo2.png" class="second">
+                        <img src="images/agguate.png" class="first">
+                        <img src="images/bangladesh.png" class="second">
+                        <img src="images/married.png" class="first">
+                        <img src="images/mada.png" class="second">
+                        <img src="images/sara3.png" class="first">
+                        <img src="images/cat.png" class="second">
+                        <img src="images/aydinstory.png" class="first">
+                        <img src="images/wahoo.png" class="second">
+                    </div>
+                    <div class="two-thirds">
+                        <h3>who am i?</h3>
+                        <p>I am a consummate daydreamer, lover of hyperbole, and story-teller.
+                        <p>As a kid, I loved telling stories. The ability to make someone laugh or
+                          even cry over a story you just told was addictive. My parents saw a future
+                          politician. I wasn’t sure what I saw, I just loved sharing stories - mine,
+                          Amber Brown’s, Aesop’s, and everyone else’s.
+                        <p>I also loved figuring things out. Whether it’s people or computers. As an
+                          elementary and middle school-aged kid, I used to spend hours taking apart my
+                          computer and then putting it back together.  Unfortunately, I never saw computer
+                          science as something I would do. That’s what the smart, quieter people were doing.
+                          I was a bit obnoxious defending classmates from teachers - I looked more like a lawyer.
+                        <p>However, my absolute favorite thing to do is make things pretty. I would redecorate
+                          my bedroom every two years and never had a cubicle or office that wasn’t decorated. As
+                          the daughter of a trained architect (later becoming an entrepreneur who owns custom framing
+                          shops in NY) and a FIT graduate (currently the best public school bus driver), I was destined
+                          to pay attention to the detail and appreciate beauty and quality.
+                    </div>
+
+                    <div class="two-thirds">
+                        <h3>what have i been up to?</h3>
+                        <p>My journey to now: a freelance UX designer living in Milan, includes more than 8 years
+                          working in international development, where according to Malcolm Gladwell, I became an
+                          expert in development finance and agriculture, and got paid to travel to Myanmar, Kosovo,
+                          Haiti, Bangladesh, Guatemala, Kenya, and most recently the Philippines. It also includes
+                          an underlying story of self-discovery and an MBA.
+                        <p>From 2010 until July 2018, I was a business development professional, designing and writing
+                          grants and contracts for USG-funded programming in developing countries and designing and implementing
+                          marketing strategies to raise company visibility. My experience was mainly with small companies - with
+                          a maximum of 40 people and a 5-person business development team. I wore a lot of hats and got a lot of
+                          opportunities:
+                        <ul>
+                            <li>Won millions of dollars for programs in resource-poor areas</li>
+                            <li>Designed information architecture and design of SharePoint sites for two companies and managed
+                              the company transition</li>
+                            <li>Was a keynote speaker for NATCCO - a national credit union association in the Philippines,
+                              discussing the importance of technology in financial inclusion</li>
+                            <li>Designed and wrote content for websites</li>
+                        </ul>
+                        <p>However, most rewarding and interesting, has been the user research during program design. I firmly
+                          believed and was often shown that solutions lie within the communities that were facing the challenges.
+                          I was only needed to kickstart their ideas or speed up activities with fundraising. I also learned that
+                          the ideas or programs that took a community-based approach were the most successful and had the most
+                          beneficial side-effects like increased savings.
+                        <p>Now, I’m an MBA student at SDA Bocconi, specializing in product development, marketing, and innovation.
+                          I’ll be getting the management background and understanding I’m confident I’ll need in the future.
+                        <h3>the revolutionary moment</h3>
+                        <p>“OW!”
+                        <p>It happened, again. My husband just walked his toe right into the bookshelf. Even if it was his clumsiness,
+                          he shouldn’t have to be careful while walking around in his living room - even if it was tiny. There had to
+                          be a better way.
+                        <p>While he was at work the next day, with a Hulk-like strength that only appears during interior decorating-spurts,
+                          I rearranged our furniture. Then I waited and observed. He would run into something else. So I’d rearrange again,
+                          then observe again.
+                        <p>After a few attempts, we finally had a solution - we cut off his toe. Kidding! We found a layout that worked best
+                          for both of us and that looked as nice as possible without replacing or removing our furniture.
+                        <p>That end-solution created a level of elation that single-handedly winning a $7 million program to create an affordable
+                          housing market in Haiti could not. I wanted to do more than just win a proposal. I wanted to create and work through
+                          something until it worked, while also addressing my love of making things pretty.
+                        <p>Then I found UX design in a TedTalk and a documentary. Finally, a name and CAREER to my hobby + skills. I immediately
+                          researched programs to learn how to utilize my expertise and learn design tools and chose Bloc’s Designer Track. Thanks
+                          to them, I now can claim all of the following skills:
                     </div>
                     <div class="clearfix"></div>
                 </div>
@@ -113,11 +151,14 @@
               </div>
               </div>
           </section>
-          <section class="about">
+          <section id="contact">
               <div id="container">
                   <h4>what else?</h4>
-                  <p>If you'd like to talk about my work, background, Jane Austen, Anne Rice,
-                    or design, contact me via the links below.</p>
+                  <p>If you'd like to talk about my work, learn more, or just chat,
+                  send me a note through one of the links below.</p>
+                  <div class="buttons">
+                        <a href="#"><button>download resume</button></a>
+                  </div>
               </div>
           </section>
     <!--
