--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <section class="hero">
                   <div id="container">
                       <h1>Hi, I’m Gulbahar,</h1>
-                      <h1>freelancing ux designer in milan</h1>
+                      <h1>freelancing ux designer in Milan;</h1>
                       <h1>made in NYC.</h1>
                       <div class="buttons">
                             <a data scroll href="#projects"><button>view select projects</button></a>
