--- a/rfs.html
+++ b/rfs.html
@@ -32,7 +32,7 @@
               </a>
               <ul class="nav-bar" id="topnav">
                   <a href="javascript:void(0);" class="hamburger" onclick="myFunction()">
-                      <i class="fa fa-bars"></i>
+                      <i class="fa fa-bars"></i></a>
                   <div class="clearfix"></div>
                   <li><a href="index.html">portfolio</a></li>
                   <li><a href="about.html">about</a></li>
@@ -41,18 +41,21 @@
               </ul>
           </nav>
           <section class="hero">
-              <div class="case-hero">
-              </div>
-          </section>
-      </header>
-      <main>
-          <section class="introduction">
               <div id="container">
                   <div class="intro">
                       <h1>refated shoes</h1>
                       <p>Branding   |   Strategy   |   UX & UI</p>
                       <a href="https://projects.invisionapp.com/share/E5E270F8X#/screens"><button class="case-study-button">view prototype</button></a>
                   </div>
+              </div>
+          </section>
+      </header>
+      <main>
+          <section class="introduction">
+
+          </section>
+          <section class="introduction">
+              <div id="container">
                   <div class="two-thirds">
                       <h2>the story</h2>
                       <p>The entrepreneur (Darcy) behind ReFated Shoes, or RFS, is an artist with
