--- a/rfs.html
+++ b/rfs.html
@@ -52,9 +52,6 @@
       </header>
       <main>
           <section class="introduction">
-
-          </section>
-          <section class="introduction">
               <div id="container">
                   <div class="two-thirds">
                       <h2>the story</h2>
@@ -66,18 +63,24 @@
                             a successful stint on Etsy, he wanted to make it official with his own site.
                       <p>With our foundation as an Etsy site, design-wise, we were starting from scratch.
                             Below, I outline how we went from this Etsy site to what we have now.</p>
+                  </div>
+                  <div class="one-third">
                       <h2>project goal</h2>
                       <ul class="goal">
                           <li><p>e-Commerce website</p></li>
                           <li><p>Brand identity</p></li>
                           <li><p>Business cards</p></li>
                       </ul>
+                      <p>
+                      <h2>dates</h2>
+                      <p>2017</p>
                   </div>
-                  <ul class="one-third">
-                        <li><img src="images/etsy.png" id="shadow"></li>
-                        <li><img src="images/arrow-black.png" id="rotate"></li>
-                        <li><img src="images/rfs-etsy.png" id="shadow"></li>
-                  </ul>
+                  <div class="clearfix"></div>
+                  <div class="transformation">
+                        <img src="images/etsy.png" class="first" id="shadow">
+                        <h2>&rarr;</h2>
+                        <img src="images/rfs-etsy.png" class="second" id="shadow">
+                  </div>
                   <div class="clearfix"></div>
               </div>
           </section>
@@ -462,7 +465,7 @@
 
           <section class="conclusion">
               <div id="container">
-                  <h2>what i learned from this experience</h2>
+                  <h2>what i learned</h2>
                   <p>In retail, photography is just as important as the site design.
                     To dispel concerns of condition and quality, the users requested
                     more photos of the finished product as well as the painting process.
@@ -473,8 +476,11 @@
           </section>
           <section class="navigation">
               <div class="arrows">
-                  <a href="index.html"><img src="images/previous.png" class="left"></a>
-                  <a href="coop.html"><img src="images/next.png" class="right"></a>
+                  <!--<a href="index.html"><img src="images/previous.png" class="left"></a>
+                  <a href="coop.html"><img src="images/next.png" class="right"></a>-->
+                  <a href="index.html" class="left"><h2>&larr; home</h2></a>
+                  <a href="coop.html" class="right"><h2>next &rarr;</h2></a>
+                  <div class="clearfix"></div>
               </div>
 
               <div class="case-studies">
@@ -487,10 +493,7 @@
           <section id="contact">
               <div id="container">
                   <div class="contact-text">
-                      <h2>If you’d like to get in touch to work or just chat about
-                        all things design & milan</h2>
-                        <p></p>
-                      <a href="mailto:gokuyan@gmail.com"><button>email me</button></a>
+                      <h2>let's chat &darr;</h2>
                   </div>
               </div>
           </section>
